[gd_scene load_steps=3 format=3 uid="uid://b5ym88utdmjjx"]

[ext_resource type="Script" path="res://Scripts/Utility/GameOverMenu.gd" id="1_lctkv"]
[ext_resource type="Theme" uid="uid://bqdph7nqf8vne" path="res://UI/Theme/UI_Start_menu.tres" id="2_s0qg7"]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_lctkv")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_s0qg7")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="PanelContainer" type="PanelContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="Control/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 72
text = "Game Over..."

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="Retry" type="Button" parent="Control/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Try Again"

[node name="Main Menu" type="Button" parent="Control/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Main Menu
"

[node name="Quit" type="Button" parent="Control/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Quit"

[connection signal="pressed" from="Control/MarginContainer/PanelContainer/VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Control/MarginContainer/PanelContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Control/MarginContainer/PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
